--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,9 @@
 
 .staff {
   background-image: url("../images/staff_picks_background.jpg");
+  background-size: cover;
   padding: 100px 0 140px;
+  background-repeat: round;
 }
 
 .staff__title {
@@ -124,12 +126,13 @@
 
 .staff__cards {
   max-width: 760px;
-  margin: 68px auto;
+  margin: 68px auto 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
   list-style-type: none;
+  padding-left: 0;
 }
 
 .card {
